# ndk-media

./: gradlew
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/csu/tliu/media/main/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
media/: CMakeLists.txt  build.gradle
media/src/main/: AndroidManifest.xml
media/src/main/cpp/source/: AudioPlayer.cpp  AudioPlayer.h  Factory.h  FfmegDecoder.cpp  FfmegDecoder.h  JNIEnvHelper.cpp  JNIEnvHelper.h  NativeLog.h  fmedia.cpp  native-lib.cpp
media/src/main/java/csu/tliu/ndk/media/: FfmpegAudioPlayer.java  OnPrepaerListener.java  Test.java
